Your descriptive commit message here

--- a/package.json
+++ b/package.json
@@ -13,12 +13,18 @@
     "@material-ui/icons": "^4.11.3",
     "@mui/icons-material": "^5.15.14",
     "@mui/material": "^5.15.15",
+    "@progress/kendo-react-indicators": "^7.4.0",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "@xstyled/styled-components": "^1.19.0",
     "axios": "^1.6.8",
     "bootstrap": "^5.3.3",
+    "cldr-core": "^45.0.0",
+    "cldr-dates-full": "^45.0.0",
+    "cldr-numbers-full": "^45.0.0",
+    "devextreme": "^23.2.6",
+    "devextreme-react": "^23.2.6",
     "jquery": "^3.7.1",
     "jwt-decode": "^4.0.0",
     "multiselect-react-dropdown": "^2.0.25",
