--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@atlaskit/theme": "^12.7.1",
+    "@bitnoi.se/react-scheduler": "^0.2.0",
     "@date-io/date-fns": "^3.0.0",
     "@emotion/react": "^11.12.0",
     "@emotion/styled": "^11.12.0",
@@ -25,6 +26,7 @@
     "@mui/styled-engine-sc": "^6.0.0-alpha.18",
     "@mui/x-charts": "^7.11.0",
     "@mui/x-date-pickers": "^7.7.1",
+    "@syncfusion/ej2-react-gantt": "^26.2.7",
     "@tailwindcss/forms": "^0.5.7",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
@@ -59,6 +61,7 @@
     "react-datepicker": "^7.1.0",
     "react-datetime": "^3.2.0",
     "react-dom": "^18.3.1",
+    "react-google-charts": "^4.0.1",
     "react-icons": "^5.2.1",
     "react-infinite-calendar": "^2.3.1",
     "react-router-dom": "^5.2.0",
